--- a/buses.html
+++ b/buses.html
@@ -1,115 +1,183 @@
-let map;
-let markers = [];
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bus Routes</title>
+  <link rel="stylesheet" href="styles.css">
+  <!-- Leaflet Map CSS & JS (no key needed!) -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <style>
+    #map { width: 100%; height: 400px; margin-top: 30px; border-radius: 8px; display: none;}
+  </style>
+</head>
+<body>
+  <div id="bus-routes-container">
+    <h1 id="route-info">Bus Routes</h1>
+    <div id="bus-list"></div>
+    <button id="search-again-btn" style="display:none;">Search Again</button>
+  </div>
+  <div id="map"></div>
+  <div id="route-stops" style="display:none; margin-top:10px;"></div>
 
-// This matches your route objects in app.js/index.html!
-const routes = [
-  {
-    from: 'Kengeri',
-    to: 'Yelahanka',
-    buses: ['401K', '401KB', '401M'],
-    routeCoordinates: [
-      { lat: 12.9236, lng: 77.4987 },
-      { lat: 12.9300, lng: 77.5100 },
-      { lat: 12.9400, lng: 77.5200 },
-      { lat: 12.9450, lng: 77.5300 },
-      { lat: 12.9539, lng: 77.6309 },
-      { lat: 12.9600, lng: 77.5800 },
-      { lat: 12.9700, lng: 77.5600 },
-      { lat: 13.0035, lng: 77.5800 },
-      { lat: 13.1035, lng: 77.5762 },
-    ],
-  },
-  // Add your other routes the same way
-];
+  <script>
+    let map;
+    let routeLine;
+    let markers = [];
 
-// Get URL params
-function getQueryParams() {
-  const urlParams = new URLSearchParams(window.location.search);
-  return {
-    fromLocation: urlParams.get('from'),
-    toLocation: urlParams.get('to'),
-  };
-}
+    const routes = [
+      {
+        from: 'Kengeri',
+        to: 'Yelahanka',
+        buses: ['401K', '401KB', '401M'],
+        routeCoordinates: [
+          [12.9236, 77.4987],
+          [12.9300, 77.5100],
+          [12.9400, 77.5200],
+          [12.9450, 77.5300],
+          [12.9539, 77.6309],
+          [12.9600, 77.5800],
+          [12.9700, 77.5600],
+          [13.0035, 77.5800],
+          [13.1035, 77.5762],
+        ],
+      },
+      // add other routes as you want, in [lat, lng] format
+    ];
 
-function initMap(center) {
-  map = new google.maps.Map(document.getElementById("map"), {
-    zoom: 12,
-    center: center,
-  });
-}
+    function getQueryParams() {
+      const urlParams = new URLSearchParams(window.location.search);
+      return {
+        fromLocation: urlParams.get('from'),
+        toLocation: urlParams.get('to'),
+      };
+    }
 
-function displayBusRoutes() {
-  const { fromLocation, toLocation } = getQueryParams();
-  const busList = document.getElementById('bus-list');
-  const routeInfo = document.getElementById('route-info');
-  const searchBtn = document.getElementById('search-again-btn');
+    function displayBusRoutes() {
+      const { fromLocation, toLocation } = getQueryParams();
+      const busList = document.getElementById('bus-list');
+      const routeInfo = document.getElementById('route-info');
+      const searchBtn = document.getElementById('search-again-btn');
 
-  let route =
-    routes.find(r => r.from === fromLocation && r.to === toLocation) ||
-    routes.find(r => r.from === toLocation && r.to === fromLocation);
+      let route =
+        routes.find(r => r.from === fromLocation && r.to === toLocation) ||
+        routes.find(r => r.from === toLocation && r.to === fromLocation);
 
-  if (!route) {
-    routeInfo.textContent = "No buses available for this route";
-    searchBtn.style.display = "block";
-    return;
-  }
+      if (!route) {
+        routeInfo.textContent = "No buses available for this route";
+        searchBtn.style.display = "block";
+        return;
+      }
 
-  routeInfo.textContent = `${fromLocation} to ${toLocation} - Bus Routes:`;
-  busList.innerHTML = "";
+      routeInfo.textContent = `${fromLocation} to ${toLocation} - Bus Routes:`;
+      busList.innerHTML = "";
+      route.buses.forEach(bus => {
+        const button = document.createElement('button');
+        button.textContent = bus;
+        button.className = 'bus-btn';
+        button.style.position = 'relative';
+        // ripple effect
+        button.addEventListener('click', function(e) {
+          const ripple = document.createElement('span');
+          ripple.className = 'ripple';
+          const rect = button.getBoundingClientRect();
+          ripple.style.left = (e.clientX - rect.left) + 'px';
+          ripple.style.top = (e.clientY - rect.top) + 'px';
+          ripple.style.width = ripple.style.height = Math.max(rect.width, rect.height) + 'px';
+          button.appendChild(ripple);
+          setTimeout(() => ripple.remove(), 600);
+        });
+        button.onclick = function () {
+          showRouteOnMap(route.routeCoordinates);
+        };
+        busList.appendChild(button);
+      });
+      searchBtn.style.display = "block";
+      searchBtn.onclick = () => {
+        window.location.href = "index.html";
+      };
+    }
 
-  // Create bus buttons
-  route.buses.forEach(bus => {
-    const button = document.createElement('button');
-    button.textContent = bus;
-    button.className = 'bus-btn';
-    button.onclick = function () {
-      showRouteOnMap(route.routeCoordinates);
-    };
-    busList.appendChild(button);
-  });
+    function showRouteOnMap(coordinates) {
+      // Show the map
+      document.getElementById('map').style.display = "block";
 
-  // Show "Search Again" button
-  searchBtn.style.display = "block";
-  searchBtn.onclick = () => {
-    window.location.href = "index.html";
-  };
-}
+      // If map doesn't exist, create and center it on first point
+      if (!map) {
+        map = L.map('map').setView(coordinates[0], 12);
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+          maxZoom: 19,
+        }).addTo(map);
+      } else {
+        map.setView(coordinates[0], 12);
+        // Remove old line and markers if exist
+        routeLine && map.removeLayer(routeLine);
+        markers.forEach(marker => map.removeLayer(marker));
+        markers = [];
+      }
 
-function showRouteOnMap(coordinates) {
-  if (!map) initMap(coordinates[0]);
-  document.getElementById("map").style.display = "block";
+      // Draw route as polyline
+      routeLine = L.polyline(coordinates, {
+        color: "#4CAF50",
+        weight: 4,
+        opacity: 0.9,
+      }).addTo(map);
 
-  // Clear previous markers
-  markers.forEach(marker => marker.setMap(null));
-  markers = [];
+      // Add markers for stops
+      coordinates.forEach((coord, idx) => {
+        const marker = L.marker(coord)
+          .bindPopup(`Stop ${idx+1}`)
+          .addTo(map);
+        markers.push(marker);
+      });
 
-  // Add markers
-  coordinates.forEach(coord => {
-    const marker = new google.maps.Marker({
-      position: coord,
-      map: map,
-    });
-    markers.push(marker);
-  });
+      // Show route stops under map
+      const stopsDiv = document.getElementById("route-stops");
+      stopsDiv.style.display = "block";
+      stopsDiv.innerHTML = `<h3>Route Stops:</h3>` +
+        coordinates.map((coord, idx) =>
+          `<div>Stop ${idx + 1}: [${coord[0].toFixed(4)}, ${coord[1].toFixed(4)}]</div>`
+        ).join("");
+    }
 
-  // Draw polyline
-  const busRouteLine = new google.maps.Polyline({
-    path: coordinates,
-    geodesic: true,
-    strokeColor: "#4CAF50",
-    strokeOpacity: 0.9,
-    strokeWeight: 4,
-    map: map,
-  });
-
-  map.setCenter(coordinates[0]);
-
-  // Show route stops below map
-  const stopsDiv = document.getElementById("route-stops");
-  stopsDiv.style.display = "block";
-  stopsDiv.innerHTML = "<h3>Route Stops:</h3>" +
-    coordinates.map((coord, idx) => `<div>Stop ${idx + 1}: [${coord.lat.toFixed(4)}, ${coord.lng.toFixed(4)}]</div>`).join("");
-}
-
-// Load results on page load
-window.onload = displayBusRoutes;
+    window.onload = displayBusRoutes;
+  </script>
+  <!-- ripple effect styles -->
+  <style>
+    .bus-btn,
+    #bus-list button {
+      transition: transform 0.14s, background 0.2s, box-shadow 0.19s;
+      border-radius: 10px;
+      position: relative;
+      overflow: hidden;
+    }
+    .bus-btn:hover,
+    #bus-list button:hover {
+      background-color: #70db70;
+      box-shadow: 0 0 8px #4CAF50;
+      color: #fff;
+    }
+    .bus-btn:active,
+    #bus-list button:active {
+      transform: scale(0.94);
+    }
+    .bus-btn .ripple,
+    #bus-list button .ripple {
+      position: absolute;
+      border-radius: 50%;
+      background: rgba(255,255,255,0.45);
+      transform: scale(0);
+      animation: ripple-effect 0.6s linear;
+      pointer-events: none;
+    }
+    @keyframes ripple-effect {
+      to {
+        transform: scale(4);
+        opacity: 0;
+      }
+    }
+    #map { border-radius: 8px;}
+  </style>
+</body>
+</html>
