Add new bus routes to buses.html
Added new bus routes from Koramangala to Electronic City and from Banashankari to Malleswaram.

--- a/buses.html
+++ b/buses.html
@@ -155,7 +155,29 @@
           [13.1035, 77.5762],
         ],
       },
-      // add other routes as needed
+      {
+  from: 'Koramangala',
+  to: 'Electronic City',
+  buses: ['340E', '356C'],
+  routeCoordinates: [
+    [12.9352, 77.6245],
+    [12.9172, 77.6232],
+    [12.8904, 77.6090],
+    [12.8390, 77.6748]
+  ],
+},
+{
+  from: 'Banashankari',
+  to: 'Malleswaram',
+  buses: ['45E', '176', '96A'],
+  routeCoordinates: [
+    [12.9222, 77.5757],
+    [12.9502, 77.5665],
+    [12.9900, 77.5690],
+    [13.0087, 77.5699]
+  ],
+},
+// ...add others as needed
     ];
 
     function getQueryParams() {
@@ -269,3 +291,4 @@
   </script>
 </body>
 </html>
+
