--- a/index.html
+++ b/index.html
@@ -6,12 +6,50 @@
   <title>Bus Tracker</title>
   <link rel="stylesheet" href="style.css">
   <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background-image: url('Ashok-Leyland-BMTC.jpg');
+      background-size: cover;
+      background-position: center center;
+      background-repeat: no-repeat;
+      min-height: 100vh;
+    }
+    .header-container {
+      background-color: rgba(0, 0, 0, 0.6);
+      color: white;
+      padding: 32px 0 18px 0;
+      margin-bottom: 20px;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    h1 {
+      color: white;
+      font-size: 3em;
+      letter-spacing: 2px;
+      margin: 0 0 6px 0;
+    }
+    h2 {
+      color: white;
+      font-size: 1.5em;
+      margin-top: 0;
+      margin-bottom: 12px;
+    }
     #liveTime {
-      font-size: 1.07em;
-      color: #1c6c3f;
-      margin-bottom: 10px;
-      margin-top: 8px;
+      padding: 7px 38px;
+      margin: 10px 0 0 0;
+      border-radius: 18px;
+      background: linear-gradient(90deg, #40c686aa 0%, #d6f9e6bb 100%);
+      color: #094d30;
+      display: inline-block;
       font-weight: bold;
+      font-size: 1.12em;
+      font-family: 'Consolas', 'Roboto Mono', monospace;
+      box-shadow: 0 2px 8px rgba(31, 128, 81, 0.13);
       letter-spacing: 1px;
     }
     .popular-routes-section {
@@ -48,6 +86,40 @@
       background: #17703f;
       transform: scale(1.08);
     }
+    form {
+      margin-top: 30px;
+      text-align: center;
+    }
+    label {
+      color: #219150;
+      font-size: 1.2em;
+      font-weight: bold;
+      margin-right: 10px;
+    }
+    select {
+      width: 200px;
+      padding: 10px;
+      margin: 10px;
+      font-size: 1em;
+      border-radius: 5px;
+      border: 1px solid #ddd;
+    }
+    button[type="submit"] {
+      padding: 10px 20px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1.2em;
+      margin: 10px;
+      box-shadow: 2px 2px 8px rgba(0,0,0,0.08);
+      transition: background 0.2s, transform 0.1s;
+    }
+    button[type="submit"]:hover {
+      background-color: #45a049;
+      transform: scale(1.03);
+    }
     .contributors-section {
       background: #fff;
       border-radius: 10px;
@@ -71,16 +143,20 @@
       margin-top: 9px;
       font-size: 0.98em;
     }
+    @media (max-width: 750px) {
+      h1 { font-size: 2em; }
+      h2, label, button, select { font-size: 1em; }
+      select, button { width: 90%; }
+      .contributors-section { padding: 10px 6px; max-width: 95%; }
+    }
   </style>
 </head>
 <body>
   <div class="header-container">
     <h1>Bus Tracker</h1>
     <h2>Search for buses</h2>
-    <!-- Live Time/Date Display -->
     <div id="liveTime"></div>
   </div>
-
   <!-- Popular routes -->
   <div class="popular-routes-section">
     <div class="popular-routes-label">Popular Routes</div>
@@ -89,7 +165,7 @@
     </div>
   </div>
 
-  <!-- Standard Form -->
+  <!-- Search Form -->
   <form id="search-form">
     <label for="from-location">From Location</label>
     <select id="from-location" name="from-location" required>
@@ -112,7 +188,6 @@
       <option value="Malleswaram">Malleswaram</option>
       <option value="Banashankari">Banashankari</option>
     </select>
-
     <button type="submit">Search</button>
   </form>
 
@@ -152,8 +227,6 @@
       badge.onclick = function() {
         document.getElementById('from-location').value = route.from;
         document.getElementById('to-location').value = route.to;
-        // Optionally, trigger form submit
-        // document.getElementById('search-form').dispatchEvent(new Event('submit'));
       };
       routesDiv.appendChild(badge);
     });
