Modify contributors section in index.html
Updated contributors section with new names.

--- a/index.html
+++ b/index.html
@@ -195,8 +195,12 @@
   <div class="contributors-section">
     <div class="contributors-title">Contributors</div>
     <div class="contributors-list">
-      <div>Chiranthana S (Owner/Dev)</div>
-      <div>You can add more contributors!</div>
+      <div>Swaroop</div>
+      <div>Chiranthana S P</div>
+      <div>D.N.Jaishree</div>
+      <div>Chittara.D</div>
+      <div>Jagan Mohan</div>
+      <div>Chiranth.G.H</div>
       <div><a href="https://github.com/chiranthana007" style="color:#17703f; text-decoration:none;">GitHub</a></div>
     </div>
   </div>
@@ -243,3 +247,4 @@
   </script>
 </body>
 </html>
+
