--- a/index.html
+++ b/index.html
@@ -52,40 +52,6 @@
       box-shadow: 0 2px 8px rgba(31, 128, 81, 0.13);
       letter-spacing: 1px;
     }
-    .popular-routes-section {
-      margin: 28px 0 25px 0;
-    }
-    .popular-routes-label {
-      font-size: 1.08em;
-      margin-bottom: 10px;
-      color: #17703f;
-      font-weight: bold;
-      letter-spacing: 1px;
-    }
-    .popular-routes-list {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 15px;
-      justify-content: center;
-      margin-bottom: 10px;
-    }
-    .route-badge {
-      background: #26bd6b;
-      color: #fff;
-      padding: 9px 20px;
-      border-radius: 16px;
-      font-size: 1em;
-      font-weight: bold;
-      cursor: pointer;
-      box-shadow: 0 2px 8px #21915033;
-      transition: background 0.17s, transform 0.14s;
-      border: none;
-      outline: none;
-    }
-    .route-badge:hover {
-      background: #17703f;
-      transform: scale(1.08);
-    }
     form {
       margin-top: 30px;
       text-align: center;
@@ -120,6 +86,84 @@
       background-color: #45a049;
       transform: scale(1.03);
     }
+    /* Popular Routes */
+    .popular-routes-section {
+      margin: 18px 0 15px 0;
+      text-align: center;
+    }
+    .popular-routes-label {
+      font-size: 1.08em;
+      margin-bottom: 10px;
+      color: #17703f;
+      font-weight: bold;
+      letter-spacing: 1px;
+    }
+    .popular-routes-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+      justify-content: center;
+      margin-bottom: 10px;
+      margin-top: 8px;
+    }
+    .route-badge {
+      background: #26bd6b;
+      color: #fff;
+      padding: 9px 20px;
+      border-radius: 16px;
+      font-size: 1em;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 0 2px 8px #21915033;
+      transition: background 0.17s, transform 0.14s;
+      border: none;
+      outline: none;
+    }
+    .route-badge:hover {
+      background: #17703f;
+      transform: scale(1.08);
+    }
+    /* Quick Access */
+    .quick-access-section {
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 2px 12px #21915010;
+      width: 90%;
+      max-width: 380px;
+      margin: 22px auto 0 auto;
+      padding: 18px 22px 17px 22px;
+      text-align: center;
+    }
+    .quick-access-title {
+      color: #189058;
+      font-size: 1.13em;
+      font-weight: bold;
+      margin-bottom: 12px;
+      letter-spacing: 1px;
+    }
+    .quick-access-links {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      align-items: center;
+    }
+    .quick-access-link {
+      background: #e6f7ef;
+      color: #07934d;
+      font-weight: 500;
+      text-decoration: none;
+      padding: 10px 0;
+      width: 85%;
+      border-radius: 10px;
+      font-size: 1.09em;
+      box-shadow: 0 1px 6px #07934d18;
+      transition: background 0.17s, color 0.17s;
+    }
+    .quick-access-link:hover {
+      background: #17b56a;
+      color: #fff;
+    }
+    /* Contributors */
     .contributors-section {
       background: #fff;
       border-radius: 10px;
@@ -147,7 +191,8 @@
       h1 { font-size: 2em; }
       h2, label, button, select { font-size: 1em; }
       select, button { width: 90%; }
-      .contributors-section { padding: 10px 6px; max-width: 95%; }
+      .contributors-section,
+      .quick-access-section { padding: 10px 6px; max-width: 95%; }
     }
   </style>
 </head>
@@ -157,14 +202,7 @@
     <h2>Search for buses</h2>
     <div id="liveTime"></div>
   </div>
-  <!-- Popular routes -->
-  <div class="popular-routes-section">
-    <div class="popular-routes-label">Popular Routes</div>
-    <div class="popular-routes-list" id="popularRoutes">
-      <!-- routes added from JS -->
-    </div>
-  </div>
-
+  
   <!-- Search Form -->
   <form id="search-form">
     <label for="from-location">From Location</label>
@@ -177,7 +215,6 @@
       <option value="Malleswaram">Malleswaram</option>
       <option value="Banashankari">Banashankari</option>
     </select>
-
     <label for="to-location">To Location</label>
     <select id="to-location" name="to-location" required>
       <option value="" disabled selected>Search...</option>
@@ -190,17 +227,31 @@
     </select>
     <button type="submit">Search</button>
   </form>
+  
+  <!-- Popular routes section BELOW search button -->
+  <div class="popular-routes-section">
+    <div class="popular-routes-label">Popular Routes</div>
+    <div class="popular-routes-list" id="popularRoutes">
+      <!-- routes will be added here by JS -->
+    </div>
+  </div>
+
+  <!-- Quick Access Section -->
+  <div class="quick-access-section">
+    <div class="quick-access-title">Quick Access</div>
+    <div class="quick-access-links">
+      <a href="support.html" class="quick-access-link">🛠️ Support</a>
+      <a href="faq.html" class="quick-access-link">❓ FAQ</a>
+      <a href="history.html" class="quick-access-link">📄 Booking History</a>
+    </div>
+  </div>
 
   <!-- Contributors Section -->
   <div class="contributors-section">
     <div class="contributors-title">Contributors</div>
     <div class="contributors-list">
-      <div>Swaroop</div>
-      <div>Chiranthana S P</div>
-      <div>D.N.Jaishree</div>
-      <div>Chittara.D</div>
-      <div>Jagan Mohan</div>
-      <div>Chiranth.G.H</div>
+      <div>Chiranthana S (Owner/Dev)</div>
+      <div>You can add more contributors!</div>
       <div><a href="https://github.com/chiranthana007" style="color:#17703f; text-decoration:none;">GitHub</a></div>
     </div>
   </div>
@@ -247,4 +298,3 @@
   </script>
 </body>
 </html>
-
